# vcast

./: .project  BUILD.md  DEVELOP.md  Makefile.CrossWindows  meson.build  meson_options.txt
.history/: .project_20200712150623  BUILD_20200627065143.md  BUILD_20200712150653.md  DEVELOP_20200627065143.md  FAQ.ko_20200627065143.md  FAQ.ko_20200712150653.md  FAQ_20200627065143.md  FAQ_20200712150653.md  LICENSE_20200712150724  README.ko_20200627065143.md  README.ko_20200712150928.md  README.pt-br_20200627065143.md  README.pt-br_20200712150724.md  README_20200627065143.md  README_20200712150724.md  release_20200712150653.sh  run_20200712150653
app/: meson.build
build-server/: .ninja_log  build.ninja
build-win32/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
build-win32-noconsole/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
build-win64/: .ninja_deps  .ninja_log  build.ninja  (+1 more)
build-win64-noconsole/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
server/: .project  build.gradle  meson.build
server/src/main/java/com/genymobile/scrcpy/: CleanUp.java  ControlMessage.java  Controller.java  DesktopConnection.java  DeviceMessageSender.java  IO.java  InvalidDisplayIdException.java  Point.java  PointersState.java  Position.java  ScreenEncoder.java  ScreenInfo.java  Size.java  StringUtils.java
server/src/main/java/com/genymobile/scrcpy/wrappers/: ClipboardManager.java  PowerManager.java  ServiceManager.java  SurfaceControl.java  WindowManager.java
server/src/test/java/com/genymobile/scrcpy/: StringUtilsTest.java
(+124 files in other folders)
